(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Badreeva Polina, Bukhalova Anna")

(maintainers "Badreeva Polina, Bukhalova Anna")

(bug_reports "not specified")

(homepage "not specified")

(package
 (name BQN) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "BQN")
 (description "BQN")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
